Fix CSVLoader and implement BFS path animation.
- Add show black and white image to the menu
- Add Show BFS patch menu option
- Vertex now uses id's for lookup instead of hash codes for BFS
- Add overlay pane for drawing animated path
- Remove redundant utility classes